gobmkida/c1/purge_persistent_reading_cache
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_reading_cache/src/engine/persistent.c:689:6: error: use of undeclared identifier 'purge_persistent_reading_cache_last_purge_position_number'
if ( purge_persistent_reading_cache_last_purge_position_number != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_reading_cache/src/engine/persistent.c:691:1: error: use of undeclared identifier 'purge_persistent_reading_cache_last_purge_position_number'
purge_persistent_reading_cache_last_purge_position_number = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_reading_cache/src/engine/persistent.c:732:79: error: use of undeclared identifier 'reading_cache'
memcpy( &persistent_reading_cache[v1], &persistent_reading_cache[v8], sizeof( reading_cache)); 
                                                                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/purge_persistent_reading_cache/src/obj/1/persistent.o] Error 1
